feat(docs): add send email update verification link to Swagger
