# api/app/Virtual/User/Requests/SendVerificationLinkRequestVirtual.php
@@ -1,0 +1,14 @@
+<?php
+
+namespace App\Virtual\User\Requests;
+
+/**
+ * @OA\Schema(
+ *      title="Send Verification Link Request",
+ *      description="Request payload for sending email verification link",
+ *      type="object"
+ * )
+ */
+class SendVerificationLinkRequestVirtual
+{
+}
